soothfast-demo/bindings/csharp/soothfast_stats.h

/* Code generated by `cargo soothfast bind gen`. DO NOT EDIT. */

#ifndef SOOTHFAST_STATS_H
#define SOOTHFAST_STATS_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

/* Which statistic a comparison reads. */
typedef enum soothfast_stats_metric {
    SOOTHFAST_STATS_METRIC_MEDIAN = 0,
    SOOTHFAST_STATS_METRIC_MAD = 1,
    SOOTHFAST_STATS_METRIC_MIN = 2,
    SOOTHFAST_STATS_METRIC_MAX = 3,
} soothfast_stats_metric;

/* A robust summary of one sample set. */
typedef struct soothfast_stats_summary soothfast_stats_summary;

/* An owned `f64` sequence. Release it with soothfast_stats_f64_array_free. */
typedef struct soothfast_stats_f64_array {
    double *data;
    size_t len;
} soothfast_stats_f64_array;

void soothfast_stats_f64_array_free(soothfast_stats_f64_array array);

/* Release a string this library returned. */
void soothfast_stats_string_free(char *text);

/* Release a Summary this library returned. */
void soothfast_stats_summary_free(soothfast_stats_summary *handle);
/* Summarize a sample set. Fails on an empty one, which has no median. */
soothfast_stats_summary * soothfast_stats_summary_new(const double *samples, size_t samples_len, char **error);
double soothfast_stats_summary_median(const soothfast_stats_summary *handle);
/* Median absolute deviation, unscaled. */
double soothfast_stats_summary_mad(const soothfast_stats_summary *handle);
double soothfast_stats_summary_min(const soothfast_stats_summary *handle);
double soothfast_stats_summary_max(const soothfast_stats_summary *handle);
/* How far `value` sits from the median, in MAD units. */
double soothfast_stats_summary_deviations(const soothfast_stats_summary *handle, double value);
/* How far each of `values` sits from the median, in MAD units. */
soothfast_stats_f64_array soothfast_stats_summary_deviations_all(const soothfast_stats_summary *handle, const double *values, size_t values_len);
/* [`Summary::deviations_all`], writing into a caller-owned buffer. */
void soothfast_stats_summary_deviations_into(const soothfast_stats_summary *handle, const double *values, size_t values_len, double *out, size_t out_len);
/* Read one statistic by name. */
double soothfast_stats_summary_get(const soothfast_stats_summary *handle, soothfast_stats_metric metric);
/* A one-line rendering of the whole summary. */
char * soothfast_stats_summary_label(const soothfast_stats_summary *handle);
/* Scale every statistic by `factor`. */
void soothfast_stats_summary_rescale(soothfast_stats_summary *handle, double factor);
/* Parse a comma-separated sample set. */
soothfast_stats_summary * soothfast_stats_summary_parse(const char *text, char **error);

/* FNV-1a fingerprint of some bytes. */
uint64_t soothfast_stats_fingerprint(const uint8_t *bytes, size_t bytes_len);

#ifdef __cplusplus
}
#endif

#endif /* SOOTHFAST_STATS_H */