soothfast-demo/bindings/csharp/Native.cs

// Code generated by `cargo soothfast bind gen`. DO NOT EDIT.

using System;
using System.IO;
using System.Reflection;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace Soothfast.Stats;

internal struct SoothfastStatsF64Array
{
    public IntPtr Data;
    public nuint Len;
}

internal static class Native
{
    private const string LibraryName = "soothfast_stats";

    [ModuleInitializer]
    internal static void Init()
    {
        NativeLibrary.SetDllImportResolver(typeof(Native).Assembly, Resolve);
    }

    private static IntPtr Resolve(string libraryName, Assembly assembly, DllImportSearchPath? searchPath)
    {
        if (libraryName != LibraryName)
        {
            return IntPtr.Zero;
        }
        string fileName = OperatingSystem.IsWindows()
            ? $"{LibraryName}.dll"
            : OperatingSystem.IsMacOS()
                ? $"lib{LibraryName}.dylib"
                : $"lib{LibraryName}.so";
        bool arm64 = RuntimeInformation.ProcessArchitecture == Architecture.Arm64;
        string rid = OperatingSystem.IsWindows()
            ? (arm64 ? "win-arm64" : "win-x64")
            : OperatingSystem.IsMacOS()
                ? (arm64 ? "osx-arm64" : "osx-x64")
                : (arm64 ? "linux-arm64" : "linux-x64");
        string baseDir = AppContext.BaseDirectory;
        foreach (string candidate in new[]
        {
            Path.Combine(baseDir, "runtimes", rid, "native", fileName),
            Path.Combine(baseDir, fileName),
        })
        {
            if (File.Exists(candidate) && NativeLibrary.TryLoad(candidate, out IntPtr handle))
            {
                return handle;
            }
        }
        return NativeLibrary.TryLoad(LibraryName, assembly, searchPath, out IntPtr fallback)
            ? fallback
            : IntPtr.Zero;
    }

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void soothfast_stats_string_free(IntPtr text);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void soothfast_stats_f64_array_free(SoothfastStatsF64Array array);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void soothfast_stats_summary_free(IntPtr handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe IntPtr soothfast_stats_summary_new(double* samples, nuint samples_len, out IntPtr error);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double soothfast_stats_summary_median(IntPtr handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double soothfast_stats_summary_mad(IntPtr handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double soothfast_stats_summary_min(IntPtr handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double soothfast_stats_summary_max(IntPtr handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double soothfast_stats_summary_deviations(IntPtr handle, double value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe SoothfastStatsF64Array soothfast_stats_summary_deviations_all(IntPtr handle, double* values, nuint values_len);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe void soothfast_stats_summary_deviations_into(IntPtr handle, double* values, nuint values_len, double* out_, nuint out__len);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double soothfast_stats_summary_get(IntPtr handle, int metric);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr soothfast_stats_summary_label(IntPtr handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void soothfast_stats_summary_rescale(IntPtr handle, double factor);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe IntPtr soothfast_stats_summary_parse(byte* text, out IntPtr error);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe ulong soothfast_stats_fingerprint(byte* bytes, nuint bytes_len);
}
